--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tinymce/tinymce-react": "^4.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "html-react-parser": "^5.1.7",
     "lucide-react": "^0.315.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
